--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Grayrids">
     <title>Thedot</title>
     <!--====== Favicon Icon ======-->
-    <link rel="shortcut icon" href="img/22.png" type="image/png">
+    <link rel="shortcut icon" href="img/33.png" type="image/png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -65,9 +65,7 @@
                         <li class="nav-item">
                             <a class="nav-link page-scroll" href="#contact">Contact</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="btn btn-singin" href="#">Download</a>
-                        </li>
+
                     </ul>
                 </div>
             </div>
@@ -80,7 +78,7 @@
                         <p>We are solving the world's biggest problems with technology.<br> We help startups and global brands with digital products on Mobile, Web, SaaS, and Machine Learning.</p>
                         <div class="header-button">
                             <a href="#" class="btn btn-border-filled">Get Started</a>
-                            <a href="#contact" class="btn btn-border page-scroll">Contact Us</a>
+                            <a href="/contactus" class="btn btn-border page-scroll">Contact Us</a>
                         </div>
                     </div>
                 </div>
@@ -141,34 +139,7 @@
 
 
 
-    <!-- Business Plan Section Start -->
-    <section id="business-plan">
-        <div class="container">
 
-            <div class="row">
-                <!-- Start Col -->
-                <div class="col-lg-6 col-md-12 pl-0 pt-70 pr-5">
-                    <div class="business-item-img">
-                        <img src="img/business/business-img.png" class="img-fluid" alt="">
-                    </div>
-                </div>
-                <!-- End Col -->
-                <!-- Start Col -->
-                <div class="col-lg-6 col-md-12 pl-4">
-                    <div class="business-item-info">
-                        <h3>Crafted For Business, Startup and Agency Websites</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <br> tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim <br> veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea <br> commodo
-                            consequat. Duis aute irure dolor in reprehenderit in voluptate <br> velit esse cillum dolore eu fugiat nulla pariatur.</p>
-
-                        <a class="btn btn-common" href="#">download</a>
-                    </div>
-                </div>
-                <!-- End Col -->
-
-            </div>
-        </div>
-    </section>
-    <!-- Business Plan Section End -->
 
 
 
@@ -182,7 +153,6 @@
                         <div>
                             <h2 class="section-title">Services We Provide</h2>
                             <div class="desc-text">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <br> eiusmod tempor incididunt ut labore et dolore.</p>
                             </div>
                         </div>
                     </div>
@@ -713,7 +683,33 @@
         </div>
     </section>
     <!-- Recent Showcase Section End -->
+    <!-- Business Plan Section Start -->
+    <section id="business-plan">
+        <div class="container">
 
+            <div class="row">
+                <!-- Start Col -->
+                <div class="col-lg-6 col-md-12 pl-0 pt-70 pr-5">
+                    <div class="business-item-img">
+                        <img src="img/business/business-img.png" class="img-fluid" alt="">
+                    </div>
+                </div>
+                <!-- End Col -->
+                <!-- Start Col -->
+                <div class="col-lg-6 col-md-12 pl-4">
+                    <div class="business-item-info">
+                        <h3><b>Cwtch</b>- News and Media Application</h3>
+                        <p>Cwtch is News and Media product, you can write content <br> we will do the rest of the things <br> commodo need to write <br> i am having funnhere</p>
+
+                        <a class="btn btn-common" href="#">View Demo</a>
+                    </div>
+                </div>
+                <!-- End Col -->
+
+            </div>
+        </div>
+    </section>
+    <!-- Business Plan Section End -->
     <!-- Our Pricing Plan Section Start -->
     <section id="pricing" class="section">
         <div class="container">
@@ -813,7 +809,7 @@
                 <div class="col-md-12 col-sm-12">
                     <div class="video-promo-content text-center">
 
-                        <a id="play-video" class="video-play-button video-popup" href="https://www.youtube.com/watch?v=Y4fodpIwal8&list=RDXCElIIYx_8s&index=13">
+                        <a id="play-video" class="video-play-button video-popup" href="https://www.youtube.com/watch?v=28vGEwWK838">
                             <span></span>
                         </a>
 
@@ -929,8 +925,8 @@
                         <div>
                             <h2 class="section-title">Team Members</h2>
                             <div class="desc-text">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</p>
-                                <p>eiusmod tempor incididunt ut labore et dolore.</p>
+
+                                <p>We are a team of creative people who are very excited to connect,<br/> discover new insights, and build wonderful things with you!</p>
                             </div>
                         </div>
                     </div>
@@ -956,8 +952,8 @@
                                 </ul>
                             </div>
                             <div class="team-inner text-center">
-                                <h5 class="team-title">Patric Green</h5>
-                                <p>Lead Designer</p>
+                                <h5 class="team-title">Sri Vigneshwar DJ</h5>
+                                <p>Developer</p>
                             </div>
                         </div>
                     </div>
@@ -980,8 +976,8 @@
                                 </ul>
                             </div>
                             <div class="team-inner text-center">
-                                <h5 class="team-title">Celina D Cruze</h5>
-                                <p>Front-end Developer</p>
+                                <h5 class="team-title">Suren</h5>
+                                <p>UI / UX , Product Designer</p>
                             </div>
                         </div>
                     </div>
@@ -1004,8 +1000,8 @@
                                 </ul>
                             </div>
                             <div class="team-inner text-center">
-                                <h5 class="team-title">Daryl Dixon</h5>
-                                <p>Content Writer</p>
+                                <h5 class="team-title">Varun</h5>
+                                <p>Developer</p>
                             </div>
                         </div>
                     </div>
@@ -1028,8 +1024,8 @@
                                 </ul>
                             </div>
                             <div class="team-inner text-center">
-                                <h5 class="team-title">Mark Parker</h5>
-                                <p>Support Engineer</p>
+                                <h5 class="team-title">Vignesh S</h5>
+                                <p>Product Photography</p>
                             </div>
                         </div>
                     </div>
@@ -1140,91 +1136,7 @@
     <!-- blog Section End -->
 
     <!-- Contact Us Section -->
-    <section id="contact" class="section">
-        <!-- Container Starts -->
-        <div class="container">
-            <!-- Start Row -->
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="contact-text section-header text-center">
-                        <div>
-                            <h2 class="section-title">Get In Touch</h2>
-                            <div class="desc-text">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</p>
-                                <p>eiusmod tempor incididunt ut labore et dolore.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
 
-            </div>
-            <!-- End Row -->
-            <!-- Start Row -->
-            <div class="row">
-                <!-- Start Col -->
-                <div class="col-lg-6 col-md-12">
-                    <form id="contactForm">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" id="name" name="name" placeholder="Name" required data-error="Please enter your name">
-                                    <div class="help-block with-errors"></div>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input type="text" placeholder="Subject" id="msg_subject" class="form-control" name="msg_subject" required data-error="Please enter your subject">
-                                    <div class="help-block with-errors"></div>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" id="email" name="email" placeholder="Email" required data-error="Please enter your Email">
-                                    <div class="help-block with-errors"></div>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input type="text" placeholder="Budget" id="budget" class="form-control" name="budget" required data-error="Please enter your Budget">
-                                    <div class="help-block with-errors"></div>
-                                </div>
-                            </div>
-                            <div class="col-md-12">
-                                <div class="form-group">
-                                    <textarea class="form-control" id="message" name="message" placeholder="Write Message" rows="4" data-error="Write your message" required></textarea>
-                                    <div class="help-block with-errors"></div>
-                                </div>
-                                <div class="submit-button">
-                                    <button class="btn btn-common" id="submit" type="submit">Submit</button>
-                                    <div id="msgSubmit" class="h3 hidden"></div>
-                                    <div class="clearfix"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <!-- End Col -->
-                <!-- Start Col -->
-                <div class="col-lg-1">
-
-                </div>
-                <!-- End Col -->
-                <!-- Start Col -->
-                <div class="col-lg-4 col-md-12">
-                    <div class="contact-img">
-                        <img src="img/contact/01.png" class="img-fluid" alt="">
-                    </div>
-                </div>
-                <!-- End Col -->
-                <!-- Start Col -->
-                <div class="col-lg-1">
-                </div>
-                <!-- End Col -->
-
-            </div>
-            <!-- End Row -->
-        </div>
-    </section>
     <!-- Contact Us Section End -->
 
     <!-- Footer Section Start -->
@@ -1239,7 +1151,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
 
                         <div class="footer-logo">
-                            <img src="img/footer-logo.png" alt="">
+                            <img src="img/33.png" alt="">
                         </div>
                     </div>
                     <!-- End Col -->
@@ -1261,11 +1173,9 @@
                         <div class="widget">
                             <h3 class="block-title">Product</h3>
                             <ul class="menu">
-                                <li><a href="#">  - Customer Service</a></li>
-                                <li><a href="#">- Enterprise</a></li>
-                                <li><a href="#">- Price</a></li>
-                                <li><a href="#">- Scurity</a></li>
-                                <li><a href="#">- Why SLICK?</a></li>
+                                <li><a href="#">Startup LIFE</a></li>
+
+                                <li><a href="#">Cwtch - News apps</a></li>
                             </ul>
                         </div>
                     </div>
@@ -1275,11 +1185,7 @@
                         <div class="widget">
                             <h3 class="block-title">Download App</h3>
                             <ul class="menu">
-                                <li><a href="#">  - Android App</a></li>
-                                <li><a href="#">- IOS App</a></li>
-                                <li><a href="#">- Windows App</a></li>
-                                <li><a href="#">- Play Store</a></li>
-                                <li><a href="#">- IOS Store</a></li>
+                                <li><a href="#">  - thedot App</a></li>
                             </ul>
                         </div>
                     </div>
@@ -1288,7 +1194,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
                         <div class="widget">
                             <h3 class="block-title">Subscribe Now</h3>
-                            <p>Appropriately implement calysts for change visa wireless catalysts for change. </p>
+                            <p>We are adicted to write tech blogs, If you are too, Feel free to subscribe </p>
                             <div class="subscribe-area">
                                 <input type="email" class="form-control" placeholder="Enter Email">
                                 <span><i class="lni-chevron-right"></i></span>
@@ -1307,7 +1213,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="site-info text-center">
-                                <p>Crafted by <a href="http://uideck.com" rel="nofollow">UIdeck</a></p>
+                                <p><a href="http://thedot.com" rel="nofollow">thedot.</a></p>
                             </div>
 
                         </div>
